fix(sidebar): fix scrollbars

--- a/packages/manager/apps/container/src/container/nav-reshuffle/sidebar/style.module.scss
+++ b/packages/manager/apps/container/src/container/nav-reshuffle/sidebar/style.module.scss
@@ -13,7 +13,7 @@
   color: white;
 
   &_menu {
-    overflow: scroll;
+    overflow-y: auto;
     flex: 1;
   }
 
